RESOLVED FIXED160439
[JSC][ARM64] Fix branchTest32/64 taking an immediate as mask
https://bugs.webkit.org/show_bug.cgi?id=160439
Summary [JSC][ARM64] Fix branchTest32/64 taking an immediate as mask
Benjamin Poulain
Reported 2016-08-01 20:21:15 PDT
[JSC][ARM64] Fix branchTest32/64 taking an immediate as mask
Attachments
Patch (4.63 KB, patch)
2016-08-01 20:23 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-08-01 20:23:36 PDT
Filip Pizlo
Comment 2 2016-08-01 21:39:24 PDT
Comment on attachment 285066 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=285066&action=review > Source/WTF/wtf/MathExtras.h:222 > + typedef typename std::make_unsigned<T>::type UnsignedT; > unsigned result = 0; > > - while (value >>= 1) > + UnsignedT unsignedValue = static_cast<UnsignedT>(value); > + while (unsignedValue >>= 1) lol
WebKit Commit Bot
Comment 3 2016-08-01 22:03:46 PDT
Comment on attachment 285066 [details] Patch Clearing flags on attachment: 285066 Committed r204009: <http://trac.webkit.org/changeset/204009>
WebKit Commit Bot
Comment 4 2016-08-01 22:03:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.