[JSC][ARM64] Fix branchTest32/64 taking an immediate as mask https://bugs.webkit.org/show_bug.cgi?id=160439

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-08-01
Reviewed by Filip Pizlo.

Source/JavaScriptCore:

* assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::branchTest64):
* b3/air/AirOpcode.opcodes:
Fix the ARM64 codegen to lower BitImm64 without using a scratch register.

Source/WTF:

* wtf/MathExtras.h:
(getLSBSet):
This was not working at all for MacroAssembler.
Since TrustedImm32/64 are signed integers, the arithmetic shift would
never get rid of the top bit and we get an infinite loop.

Canonical link: https://commits.webkit.org/178577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204009 268f45cc-cd09-0410-ab3c-d52691b4dbfc